Login html update

--- a/login.html
+++ b/login.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConnectIT by Rakib</title>
+    <title>ConnectIT</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="loginUI">
-        <p id="appName">ConnectIT</p>
-    </div>
-    
+    <div class="Login">
+    <p id="appName">ConnectIT</p>
+    <button id="microsoft-login">Login with Microsoft</button>
+    <p id="status">Please log into this webpage</p>
+    <p class="copyright">@2024</p>
+</div>
 </body>
 </html>
