--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <p id="appName">ConnectIT</p>
     <button id="microsoft-login">Login with Microsoft</button>
     <p id="status">Please log into this webpage</p>
-    <p class="copyright">@2024</p>
+    <p class="copyright"></p>
 </div>
 </body>
 </html>
