--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect IT</title>
-    <link rel="stylesheet" href="chat_page.css">
+    <link rel="stylesheet" href="../css/chat_page.css">
 </head>
 <body>
     <div class="chat-container">
@@ -63,7 +63,5 @@
             </div>
         </div>
     </div>
-
-    <script type="module" src="app1.js"></script>
 </body>
 </html>
