--- a/login.html
+++ b/login.html
@@ -13,6 +13,6 @@
     <p id="status">Please log into this webpage</p>
     <p class="copyright">Copyright (c) 2024 Mohammad Rakib</p>
 </div>
-<script type="module"src="login.js"></script>
+<script type="module"src="script/login.js"></script>
 </body>
 </html>
