--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <p id="appName">ConnectIT</p>
     <button id="microsoft-login">Login with Microsoft</button>
     <p id="status">Please log into this webpage</p>
-    <p class="copyright">Copyright (c) 2024 Mohammad Rakib</p>
+    <p class="copyright">Copyright (C) 2024 Mohammad Rakib</p>
 </div>
 <script type="module"src="script/login.js"></script>
 </body>
