--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -63,6 +63,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="../script/chat_page.js"
+    <script type="module" src="../script/chat_page.js"></script>
 </body>
 </html>
