Sender Data show in message box / chat implemented

--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -34,7 +34,7 @@
             </div>
             <div class="userInfo">
                 <img src="Library.jpg">
-                <p id="userName">Rakib</p>
+                <p id="userName"></p>
             </div>
         </div>
     
