Added search feature for search specific user

--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -11,6 +11,9 @@
         <!-- Left Side Area -->
         <div class="leftSideArea">
 
+            <input type="text" id="searchBox" onkeyup="search_box()" placeholder="Search users...">
+            <div id="searchResults" class="search-results-container"></div>
+            <!-- <input type="text"id="searchBox"Placeholder="Search by name"onkeyup="search_box()"> -->
 <p id="chatName">Chats</p>
             <div class="placeName" id="library">
                 <img src="Library.jpg">
