--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -11,7 +11,7 @@
         <!-- Left Side Area -->
         <div class="leftSideArea">
 
-            <input type="text" id="searchBox" onkeyup="search_box()" placeholder="Search users...">
+            <input type="text" id="searchBox"  placeholder="Search users...">
             <div id="searchResults" class="search-results-container"></div>
             <!-- <input type="text"id="searchBox"Placeholder="Search by name"onkeyup="search_box()"> -->
 <p id="chatName">Chats</p>
