Logout functionality added

--- a/html/chat_page.html
+++ b/html/chat_page.html
@@ -39,6 +39,10 @@
                 <img src="Library.jpg">
                 <p id="userName"></p>
             </div>
+            <div class="logout">
+                <button id="logout">LogOut
+                </button>
+            </div>
         </div>
     
         <div class="chat-main">
